src/objects/Building__c.object
<CustomObject>
    <fields>
        <fullName>Property_Type__c</fullName>
        <label>Property Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Garden Type</fullName>
                </value>
                <value>
                    <fullName>Elevator</fullName>
                </value>
                <value>
                    <fullName>Low Rise 0-24</fullName>
                </value>
                <value>
                    <fullName>Low Rise 25+</fullName>
                </value>
                <value>
                    <fullName>Public Housing</fullName>
                </value>
                <value>
                    <fullName>Single Family Home</fullName>
                </value>
                <value>
                    <fullName>Furnished</fullName>
                </value>
                <value>
                    <fullName>Historic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>REAC_Inspection_Date__c</fullName>
        <label>REAC Inspection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>REAC_Inspection_Score__c</fullName>
        <label>REAC Inspection Score</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
                <value>
                    <fullName>North</fullName>
                </value>
                <value>
                    <fullName>South</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Required_Lender_Reserve_Contribution__c</fullName>
        <label>Required Lender Reserve Contribution</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Restricted_Units__c</fullName>
        <label>Restricted Units</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Roof_Type__c</fullName>
        <label>Roof Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Flat</fullName>
                </value>
                <value>
                    <fullName>Fiberglass Shingle</fullName>
                </value>
                <value>
                    <fullName>Tile</fullName>
                </value>
                <value>
                    <fullName>Torch Down</fullName>
                </value>
                <value>
                    <fullName>Clay Tile</fullName>
                </value>
                <value>
                    <fullName>Flat with Tile Hips</fullName>
                </value>
                <value>
                    <fullName>Tile Mansard/Flat</fullName>
                </value>
                <value>
                    <fullName>Rolled Rubber/EPMD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDGE_Bill_12_Months_Post_Solar__c</fullName>
        <label>SDGE Bill 12 Months Post Solar</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SDGE_Bill_6_Months_Post_Solar__c</fullName>
        <label>SDGE Bill 6 Months Post Solar</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SDHCID__c</fullName>
        <label>SDHCID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDHC_Owned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SDHC Owned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDHC_Program_Affiliation__c</fullName>
        <label>SDHC Program Affiliation</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SDHC_Community_Relationships</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solar_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Solar Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>PropertiesSolarCompany</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Solar_Panel_Installation_Date__c</fullName>
        <label>Solar Panel Installation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Solar_Photovoltaic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Solar/Photovoltaic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Solar_Referral_Date__c</fullName>
        <label>Solar Referral Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Solar_Section_Comments__c</fullName>
        <label>Solar Section Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>US_States</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stories__c</fullName>
        <label>Stories</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Street_Name__c</fullName>
        <label>Street Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Number_End__c</fullName>
        <inlineHelpText>Enter the Highest Street Number for the Property</inlineHelpText>
        <label>Street Number End</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Number_Start__c</fullName>
        <description>Lowest Street Number</description>
        <inlineHelpText>Enter the Lowest Street Number</inlineHelpText>
        <label>Street Number Start</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>.team_01</fullName>
                </value>
                <value>
                    <fullName>.team_05</fullName>
                </value>
                <value>
                    <fullName>.team_10</fullName>
                </value>
                <value>
                    <fullName>.team_04</fullName>
                </value>
                <value>
                    <fullName>.team_03</fullName>
                </value>
                <value>
                    <fullName>.team_02</fullName>
                </value>
                <value>
                    <fullName>.team_06</fullName>
                </value>
                <value>
                    <fullName>.team_11</fullName>
                </value>
                <value>
                    <fullName>.team_14</fullName>
                </value>
                <value>
                    <fullName>.team_13</fullName>
                </value>
                <value>
                    <fullName>.team_15</fullName>
                </value>
                <value>
                    <fullName>.team_07</fullName>
                </value>
                <value>
                    <fullName>.team_09</fullName>
                </value>
                <value>
                    <fullName>.team_12</fullName>
                </value>
                <value>
                    <fullName>.team_08</fullName>
                </value>
                <value>
                    <fullName>.team_16</fullName>
                </value>
                <value>
                    <fullName>.team_18</fullName>
                </value>
                <value>
                    <fullName>Rehab Upload</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_ADA_Units__c</fullName>
        <label>Total ADA Units</label>
        <summaryFilterItems>
            <field>Property_Unit__c.Meets_ADA_Requirements__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Property_Unit__c.Building__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Affordable_Units__c</fullName>
        <label>Total Affordable Units</label>
        <summaryFilterItems>
            <field>Property_Unit__c.Affordable_Units__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </summaryFilterItems>
        <summaryForeignKey>Property_Unit__c.Building__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Bedrooms__c</fullName>
        <label>Total Bedrooms</label>
        <summarizedField>Property_Unit__c.BedroomCount__c</summarizedField>
        <summaryForeignKey>Property_Unit__c.Building__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Inclusionary_Units__c</fullName>
        <label>Total Inclusionary Units</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Buildings__c</fullName>
        <label>Total Number of Buildings</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Physical_Needs__c</fullName>
        <formula>Year_1__c + Year_2__c + Year_3__c + Year_4__c + Year_5__c + Year_6__c + Year_7__c + Year_8__c + Year_9__c + Year_10__c + Year_11__c + Year_12__c + Year_13__c + Year_14__c + Year_15__c + Year_16__c + Year_17__c + Year_18__c + Year_19__c + Year_20__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Physical Needs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Pre_Density_Bonus_Units__c</fullName>
        <label>Total Pre-Density Bonus Units</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Units__c</fullName>
        <label>Total Units</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tub_Surround_Type__c</fullName>
        <label>Tub Surround Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Laminate</fullName>
                </value>
                <value>
                    <fullName>Tile</fullName>
                </value>
                <value>
                    <fullName>Drywall</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_Bath_Average__c</fullName>
        <formula>Unit_Bath_Total__c / Units_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Bath Average</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Bath_Total__c</fullName>
        <label>Unit Bath Total</label>
        <summarizedField>Property_Unit__c.Bath_Score__c</summarizedField>
        <summaryForeignKey>Property_Unit__c.Building__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Unit_Doors_Average__c</fullName>
        <formula>Unit_Doors_Total__c / Units_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Doors Average</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Doors_Total__c</fullName>
        <label>Unit Doors Total</label>
        <summarizedField>Property_Unit__c.Doors_Score__c</summarizedField>
        <summaryForeignKey>Property_Unit__c.Building__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Unit_Electrical_Average__c</fullName>
        <formula>Unit_Electrical_Total__c / Units_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Electrical Average</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Electrical_Total__c</fullName>
        <label>Unit Electrical Total</label>
        <summarizedField>Property_Unit__c.Electrical_Score__c</summarizedField>
        <summaryForeignKey>Property_Unit__c.Building__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Unit_Flooring_Total__c</fullName>
        <label>Unit Flooring Total</label>
        <summarizedField>Property_Unit__c.Flooring_Score__c</summarizedField>
        <summaryForeignKey>Property_Unit__c.Building__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Unit_HVAC_Total__c</fullName>
        <label>Unit HVAC Total</label>
        <summarizedField>Property_Unit__c.HVAC_Score__c</summarizedField>
        <summaryForeignKey>Property_Unit__c.Building__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Unit_Health_Safety_Total__c</fullName>
        <label>Unit Health &amp; Safety Total</label>
        <summarizedField>Property_Unit__c.Health_Safety_Score__c</summarizedField>
        <summaryForeignKey>Property_Unit__c.Building__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Unit_Heat__c</fullName>
        <label>Unit Heat</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Gas</fullName>
                </value>
                <value>
                    <fullName>Electric</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_Kitchen_Total__c</fullName>
        <label>Unit Kitchen Total</label>
        <summarizedField>Property_Unit__c.Kitchen_Score__c</summarizedField>
        <summaryForeignKey>Property_Unit__c.Building__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Unit_Plumbing_Total__c</fullName>
        <label>Unit Plumbing Total</label>
        <summarizedField>Property_Unit__c.Plumbing_Score__c</summarizedField>
        <summaryForeignKey>Property_Unit__c.Building__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Unit_Range_type__c</fullName>
        <label>Unit Range type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Gas</fullName>
                </value>
                <value>
                    <fullName>Electric</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_SDCO_Total__c</fullName>
        <label>Unit SDCO Total</label>
        <summarizedField>Property_Unit__c.SD_CO_Score__c</summarizedField>
        <summaryForeignKey>Property_Unit__c.Building__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Unit_Walls_Total__c</fullName>
        <label>Unit Walls Total</label>
        <summarizedField>Property_Unit__c.Walls_Score__c</summarizedField>
        <summaryForeignKey>Property_Unit__c.Building__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Units_Count__c</fullName>
        <label>Units Count</label>
        <summaryForeignKey>Property_Unit__c.Building__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Utility_Allowance__c</fullName>
        <label>Utility Allowance</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vouchers__c</fullName>
        <label>Vouchers</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Water_Sub_Metering__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Water Sub Metering</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Water_and_Sewer_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Water and Sewer Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Properties7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Window_Type__c</fullName>
        <label>Window Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aluminum Single Pane</fullName>
                </value>
                <value>
                    <fullName>Aluminum Double Pane</fullName>
                </value>
                <value>
                    <fullName>Vinyl Retrofit</fullName>
                </value>
                <value>
                    <fullName>Vinyl Nail Fin</fullName>
                </value>
                <value>
                    <fullName>Wood Double Hung</fullName>
                </value>
                <value>
                    <fullName>Wood Casement</fullName>
                </value>
                <value>
                    <fullName>Louvered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X35_AMI__c</fullName>
        <label>35% AMI</label>
        <summaryFilterItems>
            <field>Property_Unit__c.AMI__c</field>
            <operation>equals</operation>
            <value>35%</value>
        </summaryFilterItems>
        <summaryForeignKey>Property_Unit__c.Building__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>X50_AMI__c</fullName>
        <label>50% AMI</label>
        <summaryFilterItems>
            <field>Property_Unit__c.AMI__c</field>
            <operation>equals</operation>
            <value>50%</value>
        </summaryFilterItems>
        <summaryForeignKey>Property_Unit__c.Building__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>X65_AMI__c</fullName>
        <label>65% AMI</label>
        <summaryFilterItems>
            <field>Property_Unit__c.AMI__c</field>
            <operation>equals</operation>
            <value>65%</value>
        </summaryFilterItems>
        <summaryForeignKey>Property_Unit__c.Building__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Yardi_Occupied_SF__c</fullName>
        <label>Yardi Occupied SF</label>
        <summarizedField>Property_Unit__c.Square_Footage__c</summarizedField>
        <summaryForeignKey>Property_Unit__c.Building__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Yardi_Property_ID__c</fullName>
        <label>Yardi Property ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_10__c</fullName>
        <label>Year 10</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_11__c</fullName>
        <label>Year 11</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_12__c</fullName>
        <label>Year 12</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_Built__c</fullName>
        <label>Year Built</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_Category__c</fullName>
        <label>Year Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pre 1965</fullName>
                </value>
                <value>
                    <fullName>1965-1979</fullName>
                </value>
                <value>
                    <fullName>1980-1989</fullName>
                </value>
                <value>
                    <fullName>1990-1999</fullName>
                </value>
                <value>
                    <fullName>2000-2009</fullName>
                </value>
                <value>
                    <fullName>2010-2019</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zip_4__c</fullName>
        <label>Zip +4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>Building</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Street_Name__c</columns>
        <columns>City__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Housing_Finance_Database</fullName>
        <columns>NAME</columns>
        <columns>Street_Number_Start__c</columns>
        <columns>Street_Number_End__c</columns>
        <columns>Street_Name__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Zip_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SDHC_Program_Affiliation__c</field>
            <operation>includes</operation>
            <value>Housing Finance Database</value>
        </filters>
        <label>Housing Finance Database</label>
    </listViews>
    <listViews>
        <fullName>Housing_First_Properties</fullName>
        <columns>NAME</columns>
        <columns>Street_Number_Start__c</columns>
        <columns>Street_Number_End__c</columns>
        <columns>Street_Name__c</columns>
        <columns>State__c</columns>
        <columns>Zip_Code__c</columns>
        <columns>Year_Built__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SDHC_Program_Affiliation__c</field>
            <operation>includes</operation>
            <value>Housing First</value>
        </filters>
        <label>Housing First Properties</label>
    </listViews>
    <listViews>
        <fullName>Portfolio_Management</fullName>
        <columns>NAME</columns>
        <columns>Street_Number_Start__c</columns>
        <columns>Street_Number_End__c</columns>
        <columns>Street_Name__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Zip_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SDHC_Program_Affiliation__c</field>
            <operation>includes</operation>
            <value>Portfolio Management</value>
        </filters>
        <label>Portfolio Management</label>
    </listViews>
    <listViews>
        <fullName>Rehab_Properties</fullName>
        <columns>NAME</columns>
        <columns>LegacyRHNumber__c</columns>
        <columns>Council_District__c</columns>
        <columns>Street_Number_Start__c</columns>
        <columns>Street_Number_End__c</columns>
        <columns>Street_Name__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Zip_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SDHC_Program_Affiliation__c</field>
            <operation>includes</operation>
            <value>Rehab</value>
        </filters>
        <label>Rehab Properties</label>
    </listViews>
    <nameField>
        <label>Building Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Buildings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>